<?xml version="1.0"?>
<package format="2">
  <name>operator_udp</name>
  <version>0.0.0</version>
  <description>The operator_udp package</description>
  <maintainer email="0311ben@naver.com">minseok lee</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>mobile_base_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>mobile_base_msgs</exec_depend>

  <build_depend>robit_udp</build_depend>
  <build_export_depend>robit_udp</build_export_depend>
  <exec_depend>robit_udp</exec_depend>

  <export>

  </export>
</package>
